--- a/FromBook-Opencv算法精解/10.1-10.2傅立叶变换与幅度谱和相位谱/10.1-10.2傅立叶变换与幅度谱和相位谱/10.1-10.2傅立叶变换与幅度谱和相位谱.vcxproj
+++ b/FromBook-Opencv算法精解/10.1-10.2傅立叶变换与幅度谱和相位谱/10.1-10.2傅立叶变换与幅度谱和相位谱/10.1-10.2傅立叶变换与幅度谱和相位谱.vcxproj
@@ -107,7 +107,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world341.lib;opencv_world310.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world341d.lib;opencv_world310d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
